new commit final

--- a/index.html
+++ b/index.html
@@ -654,8 +654,70 @@
             frameCount: 0,
             lastZone: '2024',
             portalClicks: 0,
-            lastGlitchSound: 0
+            lastGlitchSound: 0,
+            // New enhanced state
+            portalGlowPulse: 0,
+            zoneTransitionFlash: 0,
+            titleClicks: 0,
+            lastTitleClick: 0,
+            konamiProgress: 0,
+            easterEggActive: false,
+            screenShake: 0
         };
+
+        // Konami code: up up down down left right left right b a
+        const konamiCode = ['ArrowUp', 'ArrowUp', 'ArrowDown', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight', 'KeyB', 'KeyA'];
+
+        // Binary rain particles
+        const binaryRain = [];
+        for (let i = 0; i < 30; i++) {
+            binaryRain.push({
+                x: Math.random() * 800,
+                y: Math.random() * 500,
+                speed: Math.random() * 2 + 1,
+                char: Math.random() > 0.5 ? '1' : '0',
+                opacity: Math.random() * 0.3 + 0.1
+            });
+        }
+
+        // Confetti particles for 2024 zone
+        const confetti = [];
+        for (let i = 0; i < 20; i++) {
+            confetti.push({
+                x: Math.random() * 250,
+                y: Math.random() * 500,
+                size: Math.random() * 6 + 3,
+                speedY: Math.random() * 1 + 0.5,
+                speedX: (Math.random() - 0.5) * 0.5,
+                rotation: Math.random() * 360,
+                rotationSpeed: (Math.random() - 0.5) * 5,
+                color: ['#FFD700', '#FF6B6B', '#4ECDC4', '#45B7D1', '#96CEB4', '#FFEAA7'][Math.floor(Math.random() * 6)]
+            });
+        }
+
+        // Question marks for 2026 zone
+        const questionMarks = [];
+        for (let i = 0; i < 8; i++) {
+            questionMarks.push({
+                x: 550 + Math.random() * 250,
+                y: Math.random() * 400,
+                size: Math.random() * 20 + 15,
+                floatOffset: Math.random() * Math.PI * 2,
+                opacity: Math.random() * 0.4 + 0.2
+            });
+        }
+
+        // Energy bolts for portal
+        const energyBolts = [];
+        for (let i = 0; i < 6; i++) {
+            energyBolts.push({
+                angle: (i / 6) * Math.PI * 2,
+                length: 0,
+                maxLength: 40 + Math.random() * 30,
+                active: false,
+                timer: Math.random() * 60
+            });
+        }
 
         // ============================================
         // PARTICLE CLASS
